--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -5,7 +5,7 @@
         android:id="@+id/history"
         android:icon="@drawable/ic_history_white_24dp"
         app:showAsAction="ifRoom"
-        android:onClick="historyBtnListener"
-        android:title="History">
+        android:onClick="onClickListener_history"
+        android:title="@string/history">
     </item>
 </menu>
