--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -3,8 +3,8 @@
 
 
     <item android:id="@+id/home"
-        android:title="Home"></item>
+        android:title="@string/home"></item>
 
     <item android:id="@+id/settings"
-        android:title="Settings"></item>
+        android:title="@string/settings"></item>
 </menu>
